# aia

./: CMakeLists.txt  README.md  aia.cpp  aia.hpp  build_test.cpp
include/: adeque.hpp  aforward_list.hpp  alist.hpp  amap.hpp  aqueue.hpp  aset.hpp  avector.hpp
include/aia/: aia.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  queue.hpp  set.hpp  stack.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
src/: CMakeLists.txt  aia.cpp
tests/: CMakeLists.txt  builds.test.cpp  stl.test.cpp
